--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./index.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
     <link rel="stylesheet" href="./index.css">
     <title>Document</title>
 </head>
@@ -39,16 +38,119 @@
     </header>
     <main class="main">
         <section class="section1">
-        <ul class="ul-section">
-        <img src="./ed69f7fa91929ff49ecafac2bfd72360 2.webp" alt="" class="section-img">
+            <div class="container">
+        <img src="./ed69f7fa91929ff49ecafac2bfd72360 1.png" alt="" class="section-img">
+        <p class="sec-p">С&R</p>
         <h1 class="section-h1">ColoRawe</h1>
         <h3 class="section-h3">Your dream Nike</h3>
-        <p class="section-p">On this site you can find custom Nike sneakers of your dreams. 
-            The original company caт`t create such beautiful 
-            sneakers as we do.
+        <p class="section-p">On this site you can find custom Nike sneakers of your dreams.<br>
+            The original company caт`t create such beautiful<br>
+            sneakers as we do.<br>
             Good luck finding your way in the world of custom sneakers.</p>
-        </ul>
+            <button type="button" class="button">Buy my Nike</button>
+        </div>
     </section>
+    <section class="sec-sec">
+        <div class="container">
+        <ul class="ul-sec">
+            <li class="li-thres"><h3 class="h3-sec">Premium Quality</h3></li>
+            <li class="li-thres"><img src="./Звёзды 1.png" alt="" class="img-sec"> </li>
+            <li class="li-thres"><h3 class="h3-sec">Indelible paint</h3></li>
+            <li class="li-thres"><img src="./Краски 1.png" alt="" class="img-sec"></li>
+            <li class="li-thres"><h3 class="h3-sec">Fast shipping</h3></li>
+            <li class="li-thres"><img src="./Грузан 1.png" alt="" class="img-sec"></li>
+        </ul>
+        </div>
+    </section>
+    <section class="reviews">
+    <div class="container">
+        <h2 class="reviews-heading">Reviews</h2>
+
+        <ul class="reviews-list">
+            <li class="reviews-item">
+                <p class="reviews-text">Sneakers are very comfortable and well painted, nothing has worn
+                    off in a year.</p>
+                <p class="reviews-date">25.11</p>
+                <div class="review-content-block">
+                    <img class="review-person" src="./Ellipse 17.png" alt="">
+                    <div class="review-person-block">
+                    <h3 class="review-person-name">John Teylor</h3>
+                    <p class="review-loyalty">With us from 2018</p>
+                    </div>
+                </div>
+            </li>
+            <li class="reviews-item">
+                <p class="reviews-text">I'm very happy with this color scheme.
+                    They match all my clothes.</p>
+                <p class="review-date">05.01</p>
+                <div class="review-content-block">
+                    <img class="review persom" src="./Ellipse 18.png" alt="">
+                    <div class="review-person-block">
+                    <h3 class="review-person-name">Elizabeth Garsia</h3>
+                    <p class="review-loyalty">With us from 2020</p>
+                    </div>
+                </div>
+                <li class="reviews-item">
+                    <p class="reviews-text">Just right if you need to go to a party.
+                        I use them actively, the paint is super.</p>
+                    <p class="review-date">18.06</p>
+                    <div class="review-content-block">
+                        <img class="review persom" src="./Ellipse 18.png" alt="">
+                        <div class="review-person-block">
+                        <h3 class="review-person-name">Tom Maquare</h3>
+                        <p class="review-loyalty">With us from 2019</p>
+                        </div>
+                    </div>
+                 </li>
+             </ul>
+             </div>
+            </section>
+            <section class="order">
+                <div class="container">
+                  <h2 class="order-heading">Order</h2>
+                  <form class="order-form">
+                    <div class="order-biginput-wrapper">
+                      <input
+                        class="order-input order-input-big"
+                        type="email"
+                        placeholder="Write your email"
+                      />
+                      <p class="order-confirm">Confirm</p>
+                    </div>
+                    <input class="order-input" type="text" placeholder="Your Country" />
+                    <input class="order-input" type="text" placeholder="Your City" />
+                    <input class="order-input" placeholder="Your Adress" type="text" />
+                    <button class="order-button" type="submit">Order my Nike</button>
+                  </form>
+                </div>
+              </section>
+              <footer>
+                <section class="footer" id="footer">
+                    <div class="container">
+                       <ul class="ul-footer">
+                        <div class="first-div-footer">
+                            <li class="footer-items"><p class="have">Have a question?</p></li>
+                            <li class="footer-items"><p class="have-a">Have a proposal for cooperation?</p></li>
+                            <li class="footer-items"><p class="adve">Advertising questions?</p></li>
+                        </div>
+                        <div class="second-div-footer">
+                            <li class="footer-items" class="second-li-items"><a href="mail.to" class="firstonly">ColoRawe_support@gmail.com</a></li>
+                            <li class="footer-items" class="second-li-items"><a href="mail.to" class="secondonly">ColoRawe_Cooperation@gmail.com</a></li>
+                            <li class="footer-items" class="second-li-items"><a href="mail.to" class="thirdonly">ColoRawe_Advertising@gmail.com</a></li>
+                        </div>
+                       </ul>
+                       <ul class="matvey">
+                        <div class="third-div-footer">
+                          <p class="footer-p" id="id-one">2022 ColoRawe @All rights reserved</p>
+                          <p class="footer-p" id="id-two">United States</p>
+                        </div>
+                        <div class="fourth-div-footer">
+                          <img src="./nikelogo.webp" alt="nikelogo" class="imglogo-footer" class="ofcours">
+                        </div>
+                       </ul>
+                    </div>
+                  </section>
+              </footer>
     </main>
 </body>
 </html>
