--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header class="header">
+        <div class="container header">
         <a class="logo" href="#"><img class="logo-img" src="./ed69f7fa91929ff49ecafac2bfd72360 2.webp" alt=""></a>
         
         <nav class="header-nav">
@@ -35,6 +36,7 @@
                 <a href="" class="languanes-link">ENG</a>
             </li>
         </ul>
+    </div>
     </header>
     <main class="main">
         <section class="section1">
@@ -53,12 +55,13 @@
     <section class="sec-sec">
         <div class="container">
         <ul class="ul-sec">
-            <li class="li-thres"><h3 class="h3-sec">Premium Quality</h3></li>
-            <li class="li-thres"><img src="./Звёзды 1.png" alt="" class="img-sec"> </li>
-            <li class="li-thres"><h3 class="h3-sec">Indelible paint</h3></li>
-            <li class="li-thres"><img src="./Краски 1.png" alt="" class="img-sec"></li>
-            <li class="li-thres"><h3 class="h3-sec">Fast shipping</h3></li>
-            <li class="li-thres"><img src="./Грузан 1.png" alt="" class="img-sec"></li>
+            <li class="li-thres"><h3 class="h3-sec">Premium Quality</h3>
+            <img src="./Звёзды 1.png" alt="" class="img-sec"> </li>
+            <li class="li-thres"><img src="./Краски 1.png" alt="" class="img-sec">
+                <h3 class="h3-sec">Indelible paint</h3>
+            </li>
+            <li class="li-thres"><h3 class="h3-sec">Fast shipping</h3>
+            <img src="./Грузан 1.png" alt="" class="img-sec"></li>
         </ul>
         </div>
     </section>
@@ -82,7 +85,7 @@
             <li class="reviews-item">
                 <p class="reviews-text">I'm very happy with this color scheme.
                     They match all my clothes.</p>
-                <p class="review-date">05.01</p>
+                <p class="reviews-date">05.01</p>
                 <div class="review-content-block">
                     <img class="review persom" src="./Ellipse 18.png" alt="">
                     <div class="review-person-block">
@@ -93,7 +96,7 @@
                 <li class="reviews-item">
                     <p class="reviews-text">Just right if you need to go to a party.
                         I use them actively, the paint is super.</p>
-                    <p class="review-date">18.06</p>
+                    <p class="reviews-date">18.06</p>
                     <div class="review-content-block">
                         <img class="review persom" src="./Ellipse 18.png" alt="">
                         <div class="review-person-block">
@@ -145,7 +148,7 @@
                           <p class="footer-p" id="id-two">United States</p>
                         </div>
                         <div class="fourth-div-footer">
-                          <img src="./nikelogo.webp" alt="nikelogo" class="imglogo-footer" class="ofcours">
+                          <img src="./ed69f7fa91929ff49ecafac2bfd72360 2.webp" alt="nikelogo" class="imglogo-footer" class="ofcours">
                         </div>
                        </ul>
                     </div>
